src/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Celebrity__c</fullName>
        <label>Celebrity</label>
        <referenceTo>Celebrity__c</referenceTo>
        <relationshipLabel>Reservation</relationshipLabel>
        <relationshipName>Reservation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handler_Email__c</fullName>
        <label>Handler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Jets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jets</label>
        <referenceTo>Jets__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Celebrities__c</fullName>
        <label># of Celebrities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num_of_Miles__c</fullName>
        <label># of Miles Travelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Res-{0000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NumberofCelebrities</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
       Number_of_Celebrities__c &lt; 1,   
       ISBLANK(Number_of_Celebrities__c)
       )</errorConditionFormula>
        <errorDisplayField>Number_of_Celebrities__c</errorDisplayField>
        <errorMessage>We only charter to celebrities, not cargo. Please make sure there&apos;s at least one passenger on board and no animals please</errorMessage>
    </validationRules>
</CustomObject>